--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <div class="contenedor-nav">
         <div class="logo">
-          <img src="/imgs/logo1.png" alt="" />
+          <img src="imgs/logo1.png" alt="" />
         </div>
         <nav class="navegador">
           <ul>
